[gd_scene load_steps=7 format=2]

[ext_resource path="res://CameraControl.gd" type="Script" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Block.tscn" type="PackedScene" id=3]

[sub_resource type="Environment" id=1]

background_mode = 1
background_sky_custom_fov = 0.0
background_color = Color( 0.582748, 0.707031, 0.689554, 1 )
background_energy = 1.0
background_canvas_max_layer = 0
ambient_light_color = Color( 0.976562, 0.976562, 0.976562, 1 )
ambient_light_energy = 0.25
ambient_light_sky_contribution = 1.0
fog_enabled = false
fog_color = Color( 0.5, 0.6, 0.7, 1 )
fog_sun_color = Color( 1, 0.9, 0.7, 1 )
fog_sun_amount = 0.0
fog_depth_enabled = true
fog_depth_begin = 10.0
fog_depth_curve = 1.0
fog_transmit_enabled = false
fog_transmit_curve = 1.0
fog_height_enabled = false
fog_height_min = 0.0
fog_height_max = 100.0
fog_height_curve = 1.0
tonemap_mode = 0
tonemap_exposure = 1.0
tonemap_white = 1.0
auto_exposure_enabled = false
auto_exposure_scale = 0.4
auto_exposure_min_luma = 0.05
auto_exposure_max_luma = 8.0
auto_exposure_speed = 0.5
ss_reflections_enabled = false
ss_reflections_max_steps = 64
ss_reflections_fade_in = 0.15
ss_reflections_fade_out = 2.0
ss_reflections_depth_tolerance = 0.2
ss_reflections_roughness = true
ssao_enabled = false
ssao_radius = 1.0
ssao_intensity = 1.0
ssao_radius2 = 0.0
ssao_intensity2 = 1.0
ssao_bias = 0.01
ssao_light_affect = 0.0
ssao_color = Color( 0, 0, 0, 1 )
ssao_blur = true
dof_blur_far_enabled = false
dof_blur_far_distance = 10.0
dof_blur_far_transition = 5.0
dof_blur_far_amount = 0.1
dof_blur_far_quality = 1
dof_blur_near_enabled = false
dof_blur_near_distance = 2.0
dof_blur_near_transition = 1.0
dof_blur_near_amount = 0.1
dof_blur_near_quality = 1
glow_enabled = false
glow_levels/1 = false
glow_levels/2 = false
glow_levels/3 = true
glow_levels/4 = false
glow_levels/5 = true
glow_levels/6 = false
glow_levels/7 = false
glow_intensity = 0.8
glow_strength = 1.0
glow_bloom = 0.0
glow_blend_mode = 2
glow_hdr_threshold = 1.0
glow_hdr_scale = 2.0
glow_bicubic_upscale = false
adjustment_enabled = true
adjustment_brightness = 1.13
adjustment_contrast = 1.14
adjustment_saturation = 1.0
_sections_unfolded = [ "Adjustments", "Ambient Light", "Background", "Tonemap" ]

[sub_resource type="CapsuleMesh" id=2]

radius = 1.0
mid_height = 1.0
radial_segments = 64
rings = 8

[sub_resource type="SpatialMaterial" id=3]

render_priority = 0
flags_transparent = false
flags_unshaded = true
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 1
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 1, 1, 1, 1 )
metallic = 0.0
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 0.0
roughness_texture_channel = 0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
proximity_fade_distance = 1.0
distance_fade_enable = false
_sections_unfolded = [ "Flags" ]

[node name="Spatial" type="Spatial"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

environment = SubResource( 1 )

[node name="CameraOrigin" type="Spatial" parent="."]

script = ExtResource( 1 )

[node name="CameraRotationY" type="Spatial" parent="CameraOrigin"]

transform = Transform( 0.591632, 0, -0.806208, 0, 1, 0, 0.806208, 0, 0.591632, 0, 0, 0 )

[node name="DirectionalLight" type="DirectionalLight" parent="CameraOrigin/CameraRotationY"]

transform = Transform( 0.623013, -0.733525, 0.271654, 0.321394, 0.55667, 0.766044, -0.713134, -0.389948, 0.582563, -17.7803, 1.70413, -4.40658 )
layers = 1
light_color = Color( 0.945312, 0.841227, 0.620361, 1 )
light_energy = 0.66
light_negative = false
light_specular = 0.5
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0
_sections_unfolded = [ "Light" ]

[node name="CameraRotationX" type="Spatial" parent="CameraOrigin/CameraRotationY"]

transform = Transform( 1, -1.49012e-08, 0, 0, 0.929257, 0.369435, -2.98023e-08, -0.369435, 0.929257, 0, 0, 0 )

[node name="Camera" type="Camera" parent="CameraOrigin/CameraRotationY/CameraRotationX"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 14.3665 )
projection = 1
size = 23.3214
near = 0.1
far = 100.0
keep_aspect = 1
current = false
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler/tracking = 0

[node name="PlayerOrigin" type="Spatial" parent="."]

script = ExtResource( 2 )

[node name="Player" type="Spatial" parent="PlayerOrigin"]

[node name="MeshInstance" type="MeshInstance" parent="PlayerOrigin/Player"]

transform = Transform( 0.7, 0, 0, 0, -3.0598e-08, -0.7, 0, 0.7, -3.0598e-08, 0, 2.2308, 9.75113e-08 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 2 )
skeleton = NodePath("..")
material/0 = SubResource( 3 )
_sections_unfolded = [ "Transform", "material" ]

[node name="LevelOrigin" type="Spatial" parent="."]

[node name="StartBlock" parent="LevelOrigin" groups=[
"Block",
] instance=ExtResource( 3 )]

_sections_unfolded = [ "Transform" ]

[node name="Block9" parent="LevelOrigin" instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0 )

[node name="Block25" parent="LevelOrigin" instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -2, 0 )

[node name="Block26" parent="LevelOrigin" instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -4, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Block27" parent="LevelOrigin" instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -6, 0 )

[node name="Block28" parent="LevelOrigin" instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -8, 0 )

[node name="Block29" parent="LevelOrigin" groups=[
"Block",
] instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -8, -2 )

[node name="Block30" parent="LevelOrigin" groups=[
"Block",
] instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -8, -4 )

[node name="Block31" parent="LevelOrigin" groups=[
"Block",
] instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -8, -6 )

[node name="Block16" parent="LevelOrigin" groups=[
"Block",
] instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 2 )

[node name="Block32" parent="LevelOrigin" groups=[
"Block",
] instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2 )

[node name="Block17" parent="LevelOrigin" groups=[
"Block",
] instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 2 )

[node name="Block18" parent="LevelOrigin" groups=[
"Block",
] instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 6 )

[node name="Block19" parent="LevelOrigin" groups=[
"Block",
] instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 4 )

[node name="Block20" parent="LevelOrigin" groups=[
"Block",
] instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 8 )

[node name="Block10" parent="LevelOrigin" instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 2, 0 )

[node name="Block11" parent="LevelOrigin" instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 4, 0 )

[node name="Block12" parent="LevelOrigin" groups=[
"Block",
] instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 6, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Block13" parent="LevelOrigin" groups=[
"Block",
] instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 6, 0 )

[node name="Block14" parent="LevelOrigin" instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 6, 0 )

[node name="Block15" parent="LevelOrigin" groups=[
"Block",
] instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 6, 0 )

[node name="Block33" parent="LevelOrigin" instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 4, 0 )

[node name="Block34" parent="LevelOrigin" instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 2, 0 )

[node name="Block21" parent="LevelOrigin" groups=[
"Block",
] instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 6, -2 )

[node name="Block22" parent="LevelOrigin" groups=[
"Block",
] instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 6, -4 )

[node name="Block2" parent="LevelOrigin" groups=[
"Block",
] instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Block3" parent="LevelOrigin" groups=[
"Block",
] instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Block4" parent="LevelOrigin" groups=[
"Block",
] instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Block23" parent="LevelOrigin" groups=[
"Block",
] instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 2 )
_sections_unfolded = [ "Transform" ]

[node name="Block24" parent="LevelOrigin" groups=[
"Block",
] instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 4 )
_sections_unfolded = [ "Transform" ]

[node name="Block5" parent="LevelOrigin" groups=[
"Block",
] instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -2 )
_sections_unfolded = [ "Transform" ]

[node name="Block6" parent="LevelOrigin" groups=[
"Block",
] instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -4 )
_sections_unfolded = [ "Transform" ]

[node name="Block7" parent="LevelOrigin" groups=[
"Block",
] instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -6 )
_sections_unfolded = [ "Transform" ]

[node name="Block8" parent="LevelOrigin" groups=[
"Block",
] instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -8 )
_sections_unfolded = [ "Transform" ]


[editable path="LevelOrigin/StartBlock"]
